BM49: creating documentation for APIs color management
